data separated and moved once

--- a/dataorg.ipynb
+++ b/dataorg.ipynb
@@ -2,15 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-23 22:25:09.115766: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-02-23 22:25:09.115862: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras import models, layers"
+    "from tensorflow.keras import models, layers\n",
+    "from fenpreprocessing import puzzle_cleaning"
    ]
   },
   {
@@ -19,12 +29,12 @@
    "source": [
     "# Split Data and advance by one ply\n",
     "\n",
-    "The puzzles are presented after the first move in the move list is played, so we'll add a start+1 fen and target move column."
+    "The puzzles are presented after the first move in the move list is played, so we'll add a start+1 ply fen and target move column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +43,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "train, almost_test = train_test_split(data, test_size=.1) # Split the data first, we have a large set so will use 90% for training\n",
     "val, test = train_test_split(almost_test, test_size=.5) # Split test and validation data evenly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_fens = puzzle_cleaning(train)\n",
+    "test_fens = puzzle_cleaning(test)\n",
+    "val_fens = puzzle_cleaning(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_fens.to_csv(\"trimmed/train.csv\")\n",
+    "test_fens.to_csv(\"trimmed/test.csv\")\n",
+    "val_fens.to_csv(\"trimmed/val.csv\")"
    ]
   },
   {
