--- a/dataorg.ipynb
+++ b/dataorg.ipynb
@@ -2,25 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-23 22:25:09.115766: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-02-23 22:25:09.115862: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras import models, layers\n",
-    "from fenpreprocessing import puzzle_cleaning"
+    "from fenpreprocessing import puzzle_cleaning, make_converted_file\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -53,24 +43,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_fens = puzzle_cleaning(train)\n",
-    "test_fens = puzzle_cleaning(test)\n",
-    "val_fens = puzzle_cleaning(val)"
+    "outdir = Path('fens')\n",
+    "outdir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name, section in {'train': train, 'test': test, 'val': val}.items():\n",
+    "    outfile = f'{name}.csv'\n",
+    "    puzzle_cleaning(section).to_csv(outdir / outfile, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert to board representation arrays for all legal moves in puzzles\n",
+    "\n",
+    "Give the size required, we're not going to use the full sets currently."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_fens.to_csv(\"trimmed/train.csv\")\n",
-    "test_fens.to_csv(\"trimmed/test.csv\")\n",
-    "val_fens.to_csv(\"trimmed/val.csv\")"
+    "temp_df = pd.read_csv('fens/train.csv', skiprows=36000, nrows=12000, names=['FEN', 'target_move'])\n",
+    "train_partial, almost_test_partial = train_test_split(temp_df, test_size=.1) # Split the data first, we have a large set so will use 90% for training\n",
+    "val_partial, test_partial = train_test_split(almost_test_partial, test_size=.5) # Split test and validation data evenly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FEN</th>\n",
+       "      <th>target_move</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5rk1/1p2pp1p/3p2P1/2n5/3B4/1B4Q1/1R3KPP/q7 b -...</td>\n",
+       "      <td>c5e4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5r1k/4N1np/p1q5/1p1p4/3P1Q2/P1P2P1P/1r4P1/R5K1...</td>\n",
+       "      <td>f4f8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8/4r1k1/4Pqp1/7p/4Rp2/5B1P/6PK/6B1 w - - 6 47</td>\n",
+       "      <td>g1d4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3rr1k1/1p3pp1/p3p1q1/3pPP1p/bP1P2B1/6Q1/P5PP/R...</td>\n",
+       "      <td>g6g4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5b1r/1p1kpp1p/p5p1/3P1P2/3NP3/4K2P/PP4P1/2R5 b...</td>\n",
+       "      <td>f8h6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11995</th>\n",
+       "      <td>2kr1b1r/pp1Bp1pp/4q3/3Q1b2/5B2/8/PPP2PPP/R4RK1...</td>\n",
+       "      <td>d8d7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11996</th>\n",
+       "      <td>4r1rk/4bQ2/p2p1n1B/2nPp3/2q4P/2N2N2/P1B2PP1/2K...</td>\n",
+       "      <td>f3g5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11997</th>\n",
+       "      <td>3rk2r/p4ppp/1pqB4/2p1P3/Q2n4/7P/5RP1/2R3K1 w k...</td>\n",
+       "      <td>a4d4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11998</th>\n",
+       "      <td>6k1/2r3pp/3q4/1pRpN1P1/p2PbPQ1/7P/PP6/6K1 b - ...</td>\n",
+       "      <td>c7c5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11999</th>\n",
+       "      <td>6r1/1P6/P4k2/3R4/2P1P2K/3P2p1/8/8 b - - 0 53</td>\n",
+       "      <td>g3g2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     FEN target_move\n",
+       "0      5rk1/1p2pp1p/3p2P1/2n5/3B4/1B4Q1/1R3KPP/q7 b -...        c5e4\n",
+       "1      5r1k/4N1np/p1q5/1p1p4/3P1Q2/P1P2P1P/1r4P1/R5K1...        f4f8\n",
+       "2          8/4r1k1/4Pqp1/7p/4Rp2/5B1P/6PK/6B1 w - - 6 47        g1d4\n",
+       "3      3rr1k1/1p3pp1/p3p1q1/3pPP1p/bP1P2B1/6Q1/P5PP/R...        g6g4\n",
+       "4      5b1r/1p1kpp1p/p5p1/3P1P2/3NP3/4K2P/PP4P1/2R5 b...        f8h6\n",
+       "...                                                  ...         ...\n",
+       "11995  2kr1b1r/pp1Bp1pp/4q3/3Q1b2/5B2/8/PPP2PPP/R4RK1...        d8d7\n",
+       "11996  4r1rk/4bQ2/p2p1n1B/2nPp3/2q4P/2N2N2/P1B2PP1/2K...        f3g5\n",
+       "11997  3rk2r/p4ppp/1pqB4/2p1P3/Q2n4/7P/5RP1/2R3K1 w k...        a4d4\n",
+       "11998  6k1/2r3pp/3q4/1pRpN1P1/p2PbPQ1/7P/PP6/6K1 b - ...        c7c5\n",
+       "11999       6r1/1P6/P4k2/3R4/2P1P2K/3P2p1/8/8 b - - 0 53        g3g2\n",
+       "\n",
+       "[12000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outdir = Path('fens')\n",
+    "outdir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name, section in {'train_partial4': train_partial, 'test_partial4': test_partial, 'val_partial4': val_partial}.items():\n",
+    "    section.to_csv(outdir / f'cleaned_{name}.csv')\n",
+    "    make_converted_file(outdir / f'cleaned_{name}.csv', outdir / f'converted_{name}.csv')\n"
    ]
   },
   {
