--- a/baseline-models.ipynb
+++ b/baseline-models.ipynb
@@ -98,6 +98,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (338855, 2), Validation: (19123, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Train: {small_train.shape}, Validation: {small_val.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "597.59375"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_val.shape[0] / 32"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
