--- a/baseline-models.ipynb
+++ b/baseline-models.ipynb
@@ -12,7 +12,7 @@
     "from tensorflow.keras import models, layers\n",
     "from fenpreprocessing import fen_to_array\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "from data_generation import position_generator, fix_positions\n",
+    "from data_generation import position_generator, fix_positions, PosGen\n",
     "\n",
     "import datetime\n",
     "%load_ext tensorboard"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "597.59375"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,17 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_gen = position_generator(small_train)\n",
-    "val_gen = position_generator(small_val)"
+    "# train_gen = position_generator(small_train)\n",
+    "# val_gen = position_generator(small_val)\n",
+    "train_gen = PosGen(small_train, 'Position', 'Target')\n",
+    "val_gen = PosGen(small_val, 'Position', 'Target')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -173,95 +175,15 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/30\n",
-      "100/100 [==============================] - 2s 16ms/step - loss: 0.1635 - acc: 0.9625\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
+      "10590/10590 [==============================] - 148s 14ms/step - loss: 0.1348 - acc: 0.9681 - val_loss: 0.1263 - val_acc: 0.9693\n",
       "Epoch 2/30\n",
-      "100/100 [==============================] - 1s 14ms/step - loss: 0.1393 - acc: 0.9684\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
+      "10590/10590 [==============================] - 149s 14ms/step - loss: 0.1247 - acc: 0.9684 - val_loss: 0.1221 - val_acc: 0.9691\n",
       "Epoch 3/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1443 - acc: 0.9672\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
+      "10590/10590 [==============================] - 150s 14ms/step - loss: 0.1192 - acc: 0.9689 - val_loss: 0.1180 - val_acc: 0.9695\n",
       "Epoch 4/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1395 - acc: 0.9681\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
+      "10590/10590 [==============================] - 149s 14ms/step - loss: 0.1157 - acc: 0.9695 - val_loss: 0.1189 - val_acc: 0.9696\n",
       "Epoch 5/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1390 - acc: 0.9684\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 6/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1395 - acc: 0.9678\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 7/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1376 - acc: 0.9688\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 8/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1342 - acc: 0.9697\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 9/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1432 - acc: 0.9663\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 10/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1352 - acc: 0.9697\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 11/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1355 - acc: 0.9694\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 12/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1442 - acc: 0.9659\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 13/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1344 - acc: 0.9688\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 14/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1387 - acc: 0.9681\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 15/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1347 - acc: 0.9694\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 16/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1422 - acc: 0.9666\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 17/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1443 - acc: 0.9659\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 18/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1470 - acc: 0.9653\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 19/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1419 - acc: 0.9669\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 20/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1362 - acc: 0.9688\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 21/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1352 - acc: 0.9691\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 22/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1337 - acc: 0.9700\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 23/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1359 - acc: 0.9688\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 24/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1376 - acc: 0.9684\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 25/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1353 - acc: 0.9681\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 26/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1366 - acc: 0.9688\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 27/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1360 - acc: 0.9681\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 28/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1366 - acc: 0.9681\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 29/30\n",
-      "100/100 [==============================] - 1s 13ms/step - loss: 0.1335 - acc: 0.9694\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n",
-      "Epoch 30/30\n",
-      "100/100 [==============================] - 1s 12ms/step - loss: 0.1445 - acc: 0.9653\n",
-      "WARNING:tensorflow:Early stopping conditioned on metric `val_loss` which is not available. Available metrics are: loss,acc\n"
+      " 3736/10590 [=========>....................] - ETA: 1:25 - loss: 0.1116 - acc: 0.9703"
      ]
     }
    ],
@@ -278,8 +200,8 @@
     "\n",
     "# Fitting the model\n",
     "baseline_history = baseline_model.fit(x=train_gen,\n",
-    "                    # validation_data=val_gen,\n",
-    "                    steps_per_epoch=100,\n",
+    "                    validation_data=val_gen,\n",
+    "                    # steps_per_epoch=100,\n",
     "                    epochs=30,\n",
     "                    callbacks=[earlystop, tensorboard_callback]\n",
     "                    )"
@@ -287,99 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline_model.save('NewModel.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man_val = position_generator(small_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first = next(man_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_pos, first_target = first"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8, 8, 13)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_pos[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.08334204], dtype=float32)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max(baseline_model.predict(first_pos))"
+    "baseline_model.save('LongModel-PB')"
    ]
   },
   {
