validated and longer run model

--- a/baseline-models.ipynb
+++ b/baseline-models.ipynb
@@ -183,7 +183,49 @@
       "Epoch 4/30\n",
       "10590/10590 [==============================] - 149s 14ms/step - loss: 0.1157 - acc: 0.9695 - val_loss: 0.1189 - val_acc: 0.9696\n",
       "Epoch 5/30\n",
-      " 3736/10590 [=========>....................] - ETA: 1:25 - loss: 0.1116 - acc: 0.9703"
+      "10590/10590 [==============================] - 140s 13ms/step - loss: 0.1129 - acc: 0.9701 - val_loss: 0.1176 - val_acc: 0.9695\n",
+      "Epoch 6/30\n",
+      "10590/10590 [==============================] - 149s 14ms/step - loss: 0.1105 - acc: 0.9706 - val_loss: 0.1176 - val_acc: 0.9697\n",
+      "Epoch 7/30\n",
+      "10590/10590 [==============================] - 155s 15ms/step - loss: 0.1079 - acc: 0.9711 - val_loss: 0.1209 - val_acc: 0.9680\n",
+      "Epoch 8/30\n",
+      "10590/10590 [==============================] - 149s 14ms/step - loss: 0.1056 - acc: 0.9717 - val_loss: 0.1239 - val_acc: 0.9672\n",
+      "Epoch 9/30\n",
+      "10590/10590 [==============================] - 147s 14ms/step - loss: 0.1033 - acc: 0.9724 - val_loss: 0.1288 - val_acc: 0.9671\n",
+      "Epoch 10/30\n",
+      "10590/10590 [==============================] - 146s 14ms/step - loss: 0.1012 - acc: 0.9726 - val_loss: 0.1245 - val_acc: 0.9679\n",
+      "Epoch 11/30\n",
+      "10590/10590 [==============================] - 148s 14ms/step - loss: 0.0992 - acc: 0.9732 - val_loss: 0.1262 - val_acc: 0.9686\n",
+      "Epoch 12/30\n",
+      "10590/10590 [==============================] - 148s 14ms/step - loss: 0.0971 - acc: 0.9737 - val_loss: 0.1322 - val_acc: 0.9655\n",
+      "Epoch 13/30\n",
+      "10590/10590 [==============================] - 149s 14ms/step - loss: 0.0953 - acc: 0.9743 - val_loss: 0.1306 - val_acc: 0.9678\n",
+      "Epoch 14/30\n",
+      "10590/10590 [==============================] - 145s 14ms/step - loss: 0.0936 - acc: 0.9746 - val_loss: 0.1326 - val_acc: 0.9652\n",
+      "Epoch 15/30\n",
+      "10590/10590 [==============================] - 147s 14ms/step - loss: 0.0918 - acc: 0.9750 - val_loss: 0.1365 - val_acc: 0.9647\n",
+      "Epoch 16/30\n",
+      "10590/10590 [==============================] - 147s 14ms/step - loss: 0.0899 - acc: 0.9754 - val_loss: 0.1345 - val_acc: 0.9657\n",
+      "Epoch 17/30\n",
+      "10590/10590 [==============================] - 146s 14ms/step - loss: 0.0880 - acc: 0.9758 - val_loss: 0.1414 - val_acc: 0.9646\n",
+      "Epoch 18/30\n",
+      "10590/10590 [==============================] - 145s 14ms/step - loss: 0.0866 - acc: 0.9763 - val_loss: 0.1427 - val_acc: 0.9645\n",
+      "Epoch 19/30\n",
+      "10590/10590 [==============================] - 145s 14ms/step - loss: 0.0852 - acc: 0.9765 - val_loss: 0.1461 - val_acc: 0.9635\n",
+      "Epoch 20/30\n",
+      "10590/10590 [==============================] - 146s 14ms/step - loss: 0.0836 - acc: 0.9771 - val_loss: 0.1484 - val_acc: 0.9647\n",
+      "Epoch 21/30\n",
+      "10590/10590 [==============================] - 145s 14ms/step - loss: 0.0824 - acc: 0.9773 - val_loss: 0.1479 - val_acc: 0.9646\n",
+      "Epoch 22/30\n",
+      "10590/10590 [==============================] - 145s 14ms/step - loss: 0.0810 - acc: 0.9775 - val_loss: 0.1626 - val_acc: 0.9614\n",
+      "Epoch 23/30\n",
+      "10590/10590 [==============================] - 145s 14ms/step - loss: 0.0799 - acc: 0.9778 - val_loss: 0.1533 - val_acc: 0.9626\n",
+      "Epoch 24/30\n",
+      "10590/10590 [==============================] - 145s 14ms/step - loss: 0.0784 - acc: 0.9783 - val_loss: 0.1617 - val_acc: 0.9607\n",
+      "Epoch 25/30\n",
+      "10590/10590 [==============================] - 143s 14ms/step - loss: 0.0771 - acc: 0.9785 - val_loss: 0.1632 - val_acc: 0.9610\n",
+      "Restoring model weights from the end of the best epoch.\n",
+      "Epoch 00025: early stopping\n"
      ]
     }
    ],
@@ -209,11 +251,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: LongModel-PB/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline_model.save('LongModel-PB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline_model.save('LongModel-PB')"
+    "\n",
+    "baseline_model.save('LongModel.h5')"
    ]
   },
   {
