--- a/dataorg.ipynb
+++ b/dataorg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, almost_test = train_test_split(data, test_size=.1) # Split the data first, we have a large set so will use 90% for training\n",
-    "val, test = train_test_split(almost_test, test_size=.5) # Split test and validation data evenly"
+    "train, almost_test = train_test_split(data, test_size=.1, random_state=89252) # Split the data first, we have a large set so will use 90% for training\n",
+    "val, test = train_test_split(almost_test, test_size=.5, random_state=89252) # Split test and validation data evenly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
